--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -51,3 +51,49 @@
         padding: 3.750vw 4.688vw 3.750vw 4.688vw ;
     }
 }
+
+.clicked{
+    /*background-color: rgba(197, 228, 249, 0.3);*/
+    border: #BA1735 solid .1vw;
+}
+
+.borr-10{
+    border-radius: 0.694vw;
+}
+
+@media screen and (max-width: 768px) {
+    input{
+        border-radius: 1.302vw;
+    }
+
+    button{
+        font-size: 2.604vw;
+    }
+
+    .borr-10{
+        border-radius: 1.302vw;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    input{
+        border-radius: 3.125vw;
+    }
+
+    button{
+        font-size: 6.25vw;
+    }
+
+    .borr-10{
+        border-radius: 3.125vw;
+    }
+}
+
+@media (prefers-reduced-motion: reduce) {
+    * {
+        animation-duration: 0.01ms !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: 0.01ms !important;
+        scroll-behavior: auto !important;
+    }
+}
