--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -27,6 +27,7 @@
 
     .input{
         width: 43.490vw;
+        margin-bottom: 3vw;
         height: 6.250vw;
         border-radius: 1.302vw;
         font-size: 2.604vw;
